add JDK 21 test